# ALaDyn

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ALaDyn.sln  BUILD.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  action.yml  aladyn_doc.md  appveyor.yml  build.sh  build_hpccnaf.sh  build_mac.sh  build_marconi.sh  build_osmino.sh  entrypoint.sh  ford.sh  index.html  index.md  issues.txt  makefile  search.html
deprecated/: der_lib.f90  ft_param.f90  pic_rutil.f90  rk_param.f90
doc/: BUILD.md  DESCRIPTION.md  NAMELIST_GUIDE.md  PAPERS.md  input_data_guide.md  input_nml_guide.md
docs/: BUILD.md  CHANNELS.md  INTRO.md  RELEASES.md
examples/: input_lwfa.nml  input_pwfa.nml  input_tnsa.nml
interface/: fftw_alignment_of.html  fftw_alignment_of~2.html  fftw_alloc_complex.html  fftw_alloc_complex~2.html  fftw_alloc_real.html  fftw_alloc_real~2.html  fftw_cleanup.html  fftw_cleanup_threads.html  fftw_cleanup_threads~2.html  fftw_cleanup~2.html  fftw_cost.html  fftw_cost~2.html  fftw_destroy_plan.html  fftw_destroy_plan~2.html  fftw_estimate_cost.html  fftw_estimate_cost~2.html  fftw_execute_dft.html  fftw_execute_dft_c2r.html  fftw_execute_dft_c2r~2.html  fftw_execute_dft_r2c.html  fftw_execute_dft_r2c~2.html  fftw_execute_dft~2.html  fftw_execute_r2r.html  fftw_execute_r2r~2.html  fftw_execute_split_dft.html  fftw_execute_split_dft_c2r.html  fftw_execute_split_dft_c2r~2.html  fftw_execute_split_dft_r2c.html  fftw_execute_split_dft_r2c~2.html  fftw_execute_split_dft~2.html  fftw_export_wisdom.html  fftw_export_wisdom_to_file.html  fftw_export_wisdom_to_filename.html  fftw_export_wisdom_to_filename~2.html  fftw_export_wisdom_to_file~2.html  fftw_export_wisdom_to_string.html  fftw_export_wisdom_to_string~2.html  fftw_export_wisdom~2.html  fftw_flops.html  fftw_flops~2.html  (+237 more)
lists/: files.html  modules.html  procedures.html  types.html
module/: array_alloc.html  boris_push.html  code_util.html  common_param.html  control_bunch_input.html  curr_and_fields_util.html  diag_part_and_fields.html  env_evolve.html  fluid_density_momenta.html  fstruct_data.html  grid_field_param.html  grid_fields.html  grid_param.html  grid_part_connect.html  grid_part_lib.html  grid_part_util.html  init_beam_part_distrib.html  init_grid_field.html  init_laser_field.html  init_part_distrib.html  ionize.html  ionz_data.html  legacy_fft_lib.html  modern_fft_lib.html  mpi_curr_interface.html  mpi_field_interface.html  mpi_part_interface.html  mpi_var.html  parallel.html  phys_param.html  pic_dump.html  pic_evolve.html  pic_in.html  pic_out.html  pic_out_util.html  precision_def.html  prl_fft.html  psolve.html  pstruct_data.html  read_input.html  (+9 more)
page/: BUILD.html  CONTRIBUTING.html  DESCRIPTION.html  NAMELIST_GUIDE.html  index.html
proc/: add_particles.html  advance_lpf_envelope.html  advance_lpf_fields.html  advect_bunch_fields.html  all_gather_dpreal.html  allreduce_big_int.html  allreduce_dpreal.html  allreduce_sint.html  allreduce_vint.html  bcast_grdata.html  bcast_int_sum.html  bcast_realv_sum.html  bden_energy_out.html  beam_2d_potential.html  beam_data.html  beam_inject.html  beam_model_pot.html  beam_potential.html  bext_alloc.html  bf_bds.html  bfields_out.html  bunch_corr.html  bunch_gen.html  bv_alloc.html  cden_2d_wgh.html  cden_3d_wgh.html  cell_part_dist.html  check_decomposition.html  clean_field.html  collect_bunch_and_plasma_density.html  comoving_coordinate.html  consistency_check_grid.html  consistency_check_number_of_particles.html  consistency_check_number_of_particles_comp.html  cp_pulse.html  create_initial_folders.html  create_timestep_folder.html  curr_accumulate.html  curr_mpi_collect.html  data_out.html  (+277 more)
program/: aladyn.html
run/: cnaf_gnu_144.sh  cnaf_ifort_144.sh  fermi-1024.cmd  fermi-1024.debug.cmd  fermi-16concurrent_on_1024.cmd  fermi-256.cmd  fermi-4concurrent_on_1024.cmd  fermi-512.cmd  fermi-64.cmd  fermi-8100.cmd  fermi-8concurrent_on_1024.cmd  galileo-64.cmd  marconi-5760-gnu.cmd  marconi-5760.cmd  marconi-68-knl.cmd
scripts/: cmake.cnaf.intel  cmake.marconi  cmake.marconi.gnu  cmake.marconi.intel  cnaf.debug_ifort  make.cnaf.perf_scal  make.marconi.knl  make.marconi.perf
sourcefile/: aladyn.f90.html  array_alloc.f90.html  boris_push.f90.html  code_util.f90.html  common_param.f90.html  control_bunch_input.f90.html  curr_and_fields_util.f90.html  diag_part_and_fields.f90.html  env_evolve_in_time.f90.html  fluid_density_momenta.f90.html  fstruct_data.f90.html  grid_field_param.f90.html  grid_fields.f90.html  grid_param.f90.html  grid_part_connect.f90.html  grid_part_lib.f90.html  grid_part_util.f90.html  init_beam_part_distrib.f90.html  init_grid_fields.f90.html  init_laser_field.f90.html  init_part_distrib.f90.html  ionize.f90.html  ionz_data.f90.html  legacy_fft_lib.f90.html  modern_fft_lib.f90.html  mpi_curr_interface.f90.html  mpi_field_interface.f90.html  mpi_part_interface.f90.html  mpi_var.f90.html  parallel.f90.html  phys_param.f90.html  pic_dump.f90.html  pic_evolve_in_time.f90.html  pic_in.f90.html  pic_out.f90.html  pic_out_util.f90.html  precision_def.f90.html  prl_fft.f90.html  psolve.f90.html  pstruct_data.f90.html  (+10 more)
src/: ALaDyn.F90  ALaDyn.vfproj  ALaDyn_cpp_dependencies.vcxproj  ALaDyn_cpp_dependencies.vcxproj.filters  all_param.f90  code_util.f90  control_bunch_input.f90  cpp_folder_tree.cpp  curr_and_fields_util.f90  der_lib.f90  enable_gdb_attach.cpp  fft_lib.F90  fftg_param.f90  find_last_addr.c  find_last_addr.cpp  fluid_density_momenta.f90  fstruct_data.f90  ft_param.f90  grid_and_particles.f90  grid_fields.f90  grid_param.f90  init_beam_part_distrib.f90  init_grid_fields.f90  ionize.f90  ionz_data.f90  legacy_fft_lib.F90  modern_fft_lib.F90  mpi_var.f90  parallel.F90  particles.F90  particles.f90  pdf_moments.f90  phys_param.f90  pic_dump.f90  pic_evolve_in_time.f90  pic_in.f90  pic_out.f90  pic_out_util.f90  pic_rutil.f90  precision_def.F90  (+13 more)
tipuesearch/: tipuesearch_content.js
type/: fftw_iodim.html  fftw_iodim64.html  fftw_iodim64~2.html  fftw_iodim~2.html  fftwf_iodim.html  (+8 more)
(+122 files in other folders)
